--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ May your journey as an international student be filled with enriching experience
         <div class="tile-container">
             <div class="tile">
                 
-                <p><img src="assets/images/language.JPG" style="width:100%;"></p>
+                <p><img src="assets/images/language.jpg" style="width:100%;"></p>
             </div>
             <div class="tile">
                 <h3>Use Language Apps</h3>
