--- a/rules.html
+++ b/rules.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="card mb-4" style="display: flex; flex-direction: column;">
-            <img src="assets/images/r3.WEBP" class="card-img-top" alt="No Smoking in Public">
+            <img src="assets/images/r3.webp" class="card-img-top" alt="No Smoking in Public">
             <div class="card-body" style="flex: 1;">
                 <h5 class="card-title"><b>No Smoking in Public</b></h5>
                 <p class="card-text">Smoking is prohibited in many public areas. Look for designated smoking areas, which are often found near train stations and public buildings.</p>
@@ -100,14 +100,14 @@
             </div>
         </div>
         <div class="card mb-4" style="display: flex; flex-direction: column;">
-            <img src="assets/images/r7.WEBP" class="card-img-top" alt="Queue Properly">
+            <img src="assets/images/r7.webp" class="card-img-top" alt="Queue Properly">
             <div class="card-body" style="flex: 1;">
                 <h5 class="card-title"><b>Queue Properly</b></h5>
                 <p class="card-text">Always stand in line and wait your turn, whether it's at a bus stop, train station, or any service counter. Japanese people value order and fairness.</p>
             </div>
         </div>
         <div class="card mb-4" style="display: flex; flex-direction: column;">
-            <img src="assets/images/r8.WEBP" class="card-img-top" alt="Be Punctual">
+            <img src="assets/images/r8.webp" class="card-img-top" alt="Be Punctual">
             <div class="card-body" style="flex: 1;">
                 <h5 class="card-title"><b>No Tipping</b></h5>
                 <p class="card-text">Tipping is not a custom in Japan. A simple "thanks" will let them know you were satisfied with the service.</p>
@@ -122,7 +122,7 @@
         </div>
 
         <div class="card mb-4" style="display: flex; flex-direction: column;">
-            <img src="assets/images/r4.JPG" class="card-img-top" alt="Be Punctual">
+            <img src="assets/images/r4.jpg" class="card-img-top" alt="Be Punctual">
             <div class="card-body" style="flex: 1;">
                 <h5 class="card-title"><b>Be Punctual</b></h5>
                 <p class="card-text">Punctuality is highly valued. Always arrive on time for appointments and meetings. Being late is seen as disrespectful.</p>
