--- a/transportation.html
+++ b/transportation.html
@@ -62,7 +62,7 @@
         
         <h2>Travel Cards</h2>
         <div class="travel-card">
-            <img src="assets/images/japan-ic-cards.JPG" alt="IC Cards" style="width: 400px; height: 300px; display: block; margin: 10px auto;">
+            <img src="assets/images/japan-ic-cards.jpg" alt="IC Cards" style="width: 400px; height: 300px; display: block; margin: 10px auto;">
             <p><strong>PASMO, SUICA, ICOCA and more!</strong></p>
             <p>A prepaid card for easy access to buses, trains, and convenience stores. 
                 <a href="japan-ic-cards.html" style="text-decoration: none; color: #700206;">Click Here for more!!</a>
