--- a/JR.html
+++ b/JR.html
@@ -35,7 +35,7 @@
             <h2>JR Lines:</h2>
             <p>There are 2 kinds of JR line in Kyoto, one is the Shinkansen (bullet train) operated by JR Central, and the other is conventional trains operated by JR West.The JR line in Kyoto has 4 different named lines, Sagano line, Nara line, JR Kyoto lien and Biwako line.
 Those lines spred out to the north, south, east and west from kyoto station where the Shinkansen also stops.<br>The map below is the route of the JR line in Kyoto.
-                <img src="assets/images/JR.PNG" style="width:800px; height:600px ;">
+                <img src="assets/images/JR.png" style="width:800px; height:600px ;">
           <div class="quick-links">
             <a href="https://guidetokyoto.com/category/trains">Learn More</a>
             <a href="transportation.html">BACK</a>
