recycle-shops.html

--- a/recycle-shops.html
+++ b/recycle-shops.html
@@ -33,7 +33,7 @@
     <section id="recycle-shops" class="content">
         <div class="container">
             <h2>Recycle Shops in Kyoto</h2>
-            <img src="assets/images/recycle.JPG" style="width:600px; height: 300px";>
+            <img src="assets/images/recycle.jpg" style="width:600px; height: 300px";>
             <p>Recycle shops are essential for students in Kyoto, Japan, offering affordability, unique finds, and promoting environmental consciousness through recycling. They support local businesses and provide a cultural experience integral to Japanese lifestyle and sustainability efforts.Recycle shops are a great way to save money and find unique items.</p>
             <h4 style="color: #700206;">Find the best places to buy used and affordable items in Kyoto.</h4>
             
