--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@ Kyoto Student Guide is your go-to resource for making the most of your time in t
 
         <!-- Card Template -->
       <div class="card mb-4" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-    <img src="assets/images/fariha.JPEG" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
+    <img src="assets/images/fariha.jpeg" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
     <div class="card-body" style="flex: 1;">
         <h3 class="card-title" style="color: #700206;"><b>Tabassum Fariha (Leader) </b></h3>
         <img src="assets/images/bangladesh.png" style="width: 30px; height: 30px;">
@@ -52,7 +52,7 @@ Kyoto Student Guide is your go-to resource for making the most of your time in t
 </div>
 
 <div class="card mb-4" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-    <img src="assets/images/anand.JPEG" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
+    <img src="assets/images/anand.jpeg" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
     <div class="card-body" style="flex: 1;">
         <h3 class="card-title" style="color: #700206;"><b>Anand Rithwik</b></h3>
         <img src="assets/images/india.png" style="width: 30px; height: 30px;">
@@ -61,7 +61,7 @@ Kyoto Student Guide is your go-to resource for making the most of your time in t
 </div>
 
 <div class="card mb-4" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-    <img src="assets/images/anant.JPEG" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
+    <img src="assets/images/anant.jpeg" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
     <div class="card-body" style="flex: 1;">
         <h3 class="card-title" style="color: #700206;"><b>Gaire Ananta Prasad</b></h3>
         <img src="assets/images/nepal.png" style="width: 30px; height: 30px;">
@@ -70,7 +70,7 @@ Kyoto Student Guide is your go-to resource for making the most of your time in t
 </div>
 
 <div class="card mb-4" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-    <img src="assets/images/alyssa.JPEG" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
+    <img src="assets/images/alyssa.jpeg" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
     <div class="card-body" style="flex: 1;">
         <h3 class="card-title" style="color: #700206;"><b>Esguerra Alyssa Venise Valencia</b></h3>
         <img src="assets/images/philippines.png" style="width: 30px; height: 30px;">
@@ -79,7 +79,7 @@ Kyoto Student Guide is your go-to resource for making the most of your time in t
 </div>
 
 <div class="card mb-4" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-    <img src="assets/images/yasiru.JPEG" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
+    <img src="assets/images/yasiru.jpeg" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
     <div class="card-body" style="flex: 1;">
         <h3 class="card-title" style="color: #700206;"><b>Senarath Yasiru Gayashan</b></h3>
         <img src="assets/images/flag.png" style="width: 30px; height: 30px;">
@@ -88,7 +88,7 @@ Kyoto Student Guide is your go-to resource for making the most of your time in t
 </div>
 
 <div class="card mb-4" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-    <img src="assets/images/radhika.JPEG" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
+    <img src="assets/images/radhika.jpeg" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
     <div class="card-body" style="flex: 1;">
         <h3 class="card-title" style="color: #700206;"><b>Pandey Radhika</b></h3>
         <img src="assets/images/nepal.png" style="width: 30px; height: 30px;">
@@ -104,7 +104,7 @@ Kyoto Student Guide is your go-to resource for making the most of your time in t
     </div>
 </div>
 <div class="card mb-4" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-    <img src="assets/images/sabita.JPEG" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
+    <img src="assets/images/sabita.jpeg" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
     <div class="card-body" style="flex: 1;">
         <h3 class="card-title" style="color: #700206;"><b>Osti Sabita</b></h3>
         <img src="assets/images/nepal.png" style="width: 30px; height: 30px;">
