--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@ Kyoto Student Guide is your go-to resource for making the most of your time in t
 </div>
 
 <div class="card mb-4" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-    <img src="assets/images/alyssa.jpeg" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
+    <img src="assets/images/Alyssa.jpeg" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
     <div class="card-body" style="flex: 1;">
         <h3 class="card-title" style="color: #700206;"><b>Esguerra Alyssa Venise Valencia</b></h3>
         <img src="assets/images/philippines.png" style="width: 30px; height: 30px;">
@@ -79,7 +79,7 @@ Kyoto Student Guide is your go-to resource for making the most of your time in t
 </div>
 
 <div class="card mb-4" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
-    <img src="assets/images/yasiru.jpeg" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
+    <img src="assets/images/Yasiru.jpeg" class="card-img-top" style="border-radius: 50%; width: 200px; height: 200px;">
     <div class="card-body" style="flex: 1;">
         <h3 class="card-title" style="color: #700206;"><b>Senarath Yasiru Gayashan</b></h3>
         <img src="assets/images/flag.png" style="width: 30px; height: 30px;">
